--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^1.0.0-beta.6",
     "@angular/animations": "~7.2.0",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
@@ -18,16 +19,19 @@
     "@angular/router": "~7.2.0",
     "@fortawesome/fontawesome-free": "^5.8.2",
     "@fortawesome/fontawesome-free-webfonts": "^1.0.9",
-    "@types/chart.js": "^2.7.52",
+    "@types/chart.js": "^2.7.53",
     "angular-bootstrap-md": "^7.5.2",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.5.0",
     "core-js": "^2.5.4",
+    "easy-pie-chart": "^2.1.7",
     "hammerjs": "^2.0.8",
-    "jquery": "^3.3.1",
+    "jquery": "^3.4.1",
+    "ng-uikit-pro-standard": "git+https://oauth2:WnjuyWEc6tJRrLZyVdP9@git.mdbootstrap.com/mdb/angular/ng-uikit-pro-standard.git",
     "popper.js": "^1.15.0",
     "prettier": "^1.17.1",
     "rxjs": "~6.3.3",
+    "screenfull": "^3.3.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
