--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "ng-uikit-pro-standard": "git+https://oauth2:WnjuyWEc6tJRrLZyVdP9@git.mdbootstrap.com/mdb/angular/ng-uikit-pro-standard.git",
     "popper.js": "^1.15.0",
     "prettier": "^1.17.1",
+    "rfs": "^8.0.4",
     "rxjs": "~6.3.3",
     "screenfull": "^3.3.0",
     "tslib": "^1.9.0",
